# OPC-Classic-CoreComponents

./: .gitattributes  .gitignore  CMakeLists.txt  Check-Installation.ps1  Cleanup-OpcCoreComponents.ps1  Diagnose-Orphans.ps1  LICENSE.md  README.md  Redistributable-README.md  build.bat  build.ps1  docker-build.ps1  version.txt
.github/workflows/: clamav.yml  codeql.yml
DotNetRCWs/: .gitignore  Directory.Build.props  DotNetRCWs.slnx  NuGet.Config  README.md  build.ps1  redistributable-README.md  signing-key.ps1
DotNetRCWs/OpcComRcw/: Commands.cs  DataAccess.cs  DataExchange.cs  HistoricalDataAccess.cs  OpcComRcw.csproj  ServerEnumerator.cs  Utils.cs
DotNetRCWs/OpcNetApi/: Opc.ConnectData.cs  Opc.Factory.cs  Opc.Server.cs  OpcNetApi.csproj
DotNetRCWs/OpcNetApi.Com/: FILETIME.cs  OpcCom.Factory.cs  OpcCom.Interop.cs  OpcCom.ServerEnumerator.cs  OpcNetApi.Com.csproj
DotNetRCWs/OpcNetApi.Com/Ae/: OpcCom.Ae.Server.cs
DotNetRCWs/OpcNetApi.Com/Da/: OpcCom.Da.Subscription.cs
DotNetRCWs/OpcNetApi.Com/Da20/: OpcCom.Da20.Server.cs
DotNetRCWs/OpcNetApi.Com/Hda/: OpcCom.Hda.Server.cs
DotNetRCWs/OpcNetApi.Com/Wrapper/: OpcCom.Da.Wrapper.Server.cs
DotNetRCWs/nuget/: .gitignore
Source/AlarmsAndEvents/ProxyStub/: opc_ae.idl  opc_ae.rc  opc_aeps.def  opcae_er.h  opcae_er.mc  opcaedef.h  resource.h
Source/Batch/ProxyStub/: OpcBatchDef.h  OpcBatchError.h  OpcBatchError.mc  OpcBatchProps.h  opcbc.idl  opcbc_ps.rc  resource.h
Source/Commands/ProxyStub/: OpcCmd.idl  OpcCmdError.h  OpcCmdError.mc  OpcCmdPs.def  OpcCmdPs.rc  resource.h
Source/Common/CategoryManager/: CCategoryManager.cpp  CCategoryManager.h  CategoryManager.cpp  CategoryManager.idl  CategoryManager.rc  StdAfx.cpp  StdAfx.h  resource.h
Source/Common/ProxyStub/: opccomn.idl  opccomn_ps.rc  resource.h
Source/Common/SampleDevice/: COpcDaDeviceItem.cpp  StdAfx.h
Source/Common/SampleServer205/: COpcDa20Group.h  COpcDa20Server.cpp  COpcDa20Server.h  OpcDa20Server.cpp  OpcDa20Server.idl  StdAfx.cpp
Source/Common/SampleServerClasses/: COpcBinary.cpp  COpcBinary.h  COpcBinaryStream.cpp  COpcBinaryWriter.cpp  COpcBinaryWriter.h  COpcDaBrowseElement.cpp  COpcDaCache.h  COpcDaCacheItem.cpp  COpcDaCacheItem.h  COpcDaEnumItem.cpp  COpcDaEnumItem.h  COpcDaGroup.cpp  COpcDaGroupItem.cpp  COpcDaProperty.cpp  COpcDaProperty.h  COpcDaServer.cpp  COpcDaTransaction.cpp  COpcDaUpdateThread.cpp  OpcDaHelpers.cpp  StdAfx.cpp  StdAfx.h  resource.h
Source/Common/ServerEnumerator/: OpcEnum.cpp  OpcEnum.idl  OpcEnum.rc  OpcEnum.rgs  OpcSeLst.cpp  OpcServerList.rgs  OpcSvLst.h  StdAfx.cpp  StdAfx.h  resource.h
Source/Common/ServerEnumerator/DCOM Config/: AclMgmt.cpp  DComPerm.cpp  DComPerm.h  ListAcl.cpp  SDMgmt.cpp  SrvcMgmt.cpp  UtilS.cpp  Wrappers.cpp
Source/Common/TestClient/: OpcTestClient.cpp
Source/Common/TestServer/: COpcTestGroup.h  COpcTestServer.cpp  COpcTestServer.h  OpcTestServer.cpp  OpcTestServer.idl  StdAfx.cpp  StdAfx.h  resource.h
Source/DataAccess/ProxyStub/: opcda.idl  opcda_ps.rc  opcerror.h  opcerror.mc  resource.h
Source/DataExchange/ProxyStub/: OpcDx.idl  OpcDxError.h  OpcDxError.mc  OpcDxPs.def  OpcDxPs.rc  resource.h
Source/HistoricalDataAccess/ProxyStub/: OpcHda_Error.h  OpcHda_Error.mc  opchda.idl  opchda_ps.def  opchda_ps.rc  resource.h
Source/Include/: version.h
Source/Security/ProxyStub/: OpcErrSec.h  OpcErrSec.mc  opcSec.idl  opcSec_PS.rc  resource.h
Source/Shared/OpcUtilityClasses/: COpcArray.h  COpcBrowseElement.cpp  COpcBrowseElement.h  COpcCPContainer.cpp  COpcCPContainer.h  COpcClassFactory.cpp  COpcClassFactory.h  COpcComModule.cpp  COpcComModule.h  COpcComObject.h  COpcCommon.cpp  COpcCommon.h  COpcConnectionPoint.cpp  COpcConnectionPoint.h  COpcCriticalSection.h  COpcEnumCPs.cpp  COpcEnumCPs.h  COpcEnumString.cpp  COpcEnumString.h  COpcEnumUnknown.cpp  COpcEnumUnknown.h  COpcFile.cpp  COpcFile.h  COpcList.h  COpcMap.h  COpcSecurity.cpp  COpcSecurity.h  COpcSortedArray.h  COpcString.cpp  COpcString.h  COpcText.cpp  COpcText.h  COpcTextReader.cpp  COpcTextReader.h  COpcThread.cpp  COpcThread.h  COpcThreadPool.cpp  COpcThreadPool.h  COpcVariant.cpp  COpcVariant.h  (+22 more)
Source/Shared/SampleDevice/: COpcDaDevice.cpp  COpcDaDevice.h  COpcDaDeviceItem.cpp  COpcDaDeviceItem.h  StdAfx.cpp  StdAfx.h
Source/Shared/SampleServer205/: COpcDa20Cache.cpp  COpcDa20Cache.h  COpcDa20Group.h  COpcDa20Server.cpp  COpcDa20Server.h  OpcDa20Server.binary.xml  OpcDa20Server.config.xml  OpcDa20Server.cpp  OpcDa20Server.idl  OpcDa20Server.rc  StdAfx.cpp  StdAfx.h  build.timestamp  resource.h
Source/Shared/SampleServerClasses/: COpcBinary.cpp  COpcBinary.h  COpcBinaryReader.cpp  COpcBinaryReader.h  COpcBinaryStream.cpp  COpcBinaryStream.h  COpcBinaryWriter.cpp  COpcBinaryWriter.h  COpcDaBrowseElement.cpp  COpcDaBrowseElement.h  COpcDaBuffer.h  COpcDaCache.cpp  COpcDaCache.h  COpcDaCacheItem.cpp  COpcDaCacheItem.h  COpcDaEnumGroup.h  COpcDaEnumItem.cpp  COpcDaEnumItem.h  COpcDaGroup.cpp  COpcDaGroup.h  COpcDaGroupItem.cpp  COpcDaGroupItem.h  COpcDaProperty.cpp  COpcDaProperty.h  COpcDaServer.cpp  COpcDaServer.h  COpcDaTransaction.cpp  COpcDaTransaction.h  COpcDaTypeDictionary.cpp  COpcDaTypeDictionary.h  COpcDaUpdateThread.cpp  COpcDaUpdateThread.h  COpcDaWriteThread.cpp  COpcDaWriteThread.h  IOpcDaDevice.h  OpcDaHelpers.cpp  OpcDaHelpers.h  StdAfx.cpp  StdAfx.h  resource.h
Source/Test/TestClient/: OpcTestClient.cpp
Source/Test/TestServer/: COpcTestGroup.h  COpcTestServer.cpp  COpcTestServer.h  OpcTestServer.config.xml  OpcTestServer.cpp  OpcTestServer.idl  OpcTestServer.rc  StdAfx.cpp  StdAfx.h  resource.h
WiX/: Installer.wxs  License.rtf  MergeModule.wxs  MergeModuleSdk.wxs
cmake/: OpcProxyStub.cmake
docker/: Dockerfile  entrypoint.cmd
test/: Build-MsmHarness.ps1  MsmHarness.wxs  README.md  Run-HarnessTest.ps1
